Fix alignment of icons in main menu
Differences in icon widths caused the menu item text not to line up.

I'm back! Just getting my feet wet :)

--- a/src/mainMenu.styl
+++ b/src/mainMenu.styl
@@ -80,8 +80,17 @@
 								display none
 
 						> .fa
+							width 25px
+
 							padding-right 10px
 							transition padding-right .25s ease
+
+							text-align center
+
+							&.fa-wpforms
+								// Prevent icon from being positioned at a half pixel value
+								// (prevents blurring)
+								padding-right 9px
 
 							@media screen and (max-width: 899px)
 								padding-right 0px
